🔥 Agregado contador de visitas y mejoras finales

--- a/index.html
+++ b/index.html
@@ -45,17 +45,30 @@
     Tu navegador no soporta audio en HTML5.
     </audio>
 
-<div class="redes">
-        <a href="https://github.com/DonGeeo87" target="_blank" rel="noopener noreferrer" title="GitHub">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
-        </a>
-        <a href="https://instagram.com/giorgio.interdonato" target="_blank" rel="noopener noreferrer" title="Instagram">
-            <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="Instagram">
-        </a>
-        <a href="https://www.youtube.com/@lanzatumarcadigital" target="_blank" rel="noopener noreferrer" title="YouTube">
-            <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube">
+    <div class="redes">
+            <a href="https://github.com/DonGeeo87" target="_blank" rel="noopener noreferrer" title="GitHub">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
+            </a>
+            <a href="https://instagram.com/giorgio.interdonato" target="_blank" rel="noopener noreferrer" title="Instagram">
+                <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="Instagram">
+            </a>
+            <a href="https://www.youtube.com/@lanzatumarcadigital" target="_blank" rel="noopener noreferrer" title="YouTube">
+                <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube">
+            </a>
+            </div>
+
+            <div class="redes">
+    <!-- tus íconos -->
+    </div>
+
+        <div class="visitas">
+        <!-- hitwebcounter Code START -->
+        <a href="https://www.hitwebcounter.com" target="_blank">
+            <img src="https://hitwebcounter.com/counter/counter.php?page=21003659&style=0006&nbdigits=9&type=page&initCount=99"
+                title="Contador de visitas" alt="Visit counter For Websites" border="0">
         </a>
         </div>
+
 
 
 </div>
